# helium

./: .gitignore  .gitmodules  Cargo.toml  README.md  out.cu
examples/: cifar10_manual.rs  linear_regression.rs  mnist_manual.rs  permute_dim_benchmark.rs
helium/: Cargo.toml
helium-ir/: Cargo.toml
helium-ir/src/: lib.rs  opgraph.rs  shape.rs
helium-ir/src/opgraph/: op.rs  subgraph.rs
helium-ir/src/opgraph/op/: precision.rs
helium-kernel-generator/: Cargo.toml  build.rs  out.cu
helium-kernel-generator/benches/: Cargo.toml  matmul.rs
helium-kernel-generator/benches/src/: main.rs
helium-kernel-generator/src/: architecture.rs  builder.rs  cute.rs  error.rs  lib.rs  pointwise.rs
helium-kernel-generator/src/generators/: matmul.rs
helium-kernel-generator/src/generators/matmul/: copy_synthesis.rs  emit.rs  sm80.rs
helium-kernel-generator/src/generators/matmul/emit/: copy_synthesis.rs
helium-kernel-generator/templates/matmul/: .clangd  sm80.cu  sm80_includes.cu
helium-kernel-generator/tests/: matmul.rs
helium-macros/: Cargo.toml
helium-macros/src/: derive_module.rs  lib.rs
helium-playground/: .gitignore  Cargo.toml
helium-playground/src/: autodiff.rs  copy_synthesis.rs  cost_model.rs  cute.rs  fused_graph.rs  graph_synthesizer.rs  kernel_generator.rs  opgraph.rs  subdivision.rs  torch_synthesizer.rs  util.rs
helium-playground/src/templates/: auxiliary.cu  epilogue_reduction_batch.cu  epilogue_reduction_col.cu  epilogue_reduction_row.cu  matmul.cu
helium-playground/src/util/: kernel_builder.rs
helium/examples/: cifar10_manual.rs  linear_regression.rs  mnist_manual.rs  permute_dim_benchmark.rs
helium/src/: backend.rs  cuda.rs  device.rs  error.rs  lib.rs  loss.rs  module.rs  opgraph.rs  optimizer.rs  raw_tensor.rs  tensor.rs  thread_pool.rs
helium/src/backend/: plan_generation.rs
helium/src/cuda/: context.rs  cudnn.rs  error.rs  instr.rs  kernel_jit.rs  tensor_storage.rs
helium/src/cuda/allocator/: block.rs  device.rs  host_pinned.rs
helium/src/cuda/instr/: cudnn_graph.rs  permute_dims.rs  pointwise.rs
helium/src/cuda/instr/permute_dims/: jit.rs
helium/src/cuda/instr/pointwise/: jit.rs
helium/src/cuda/snapshots/: helium__cuda__kernel_jit__tests__compile_simple_kernel.snap
helium/src/module/: record.rs
helium/src/module/record/: safetensors.rs
helium/src/modules/: conv.rs  linear.rs
helium/src/opgraph/: subgraph.rs
helium/src/optimizer/: adam.rs  sgd.rs
helium/src/tensor/: gradients.rs  param.rs  tape.rs
helium/tests/: autodiff.rs  loss.rs  module.rs  stress_test.rs  tensor_ops.rs
macros/: Cargo.toml
macros/src/: derive_module.rs
resnet-train/: .gitignore  Cargo.toml
resnet-train/src/: main.rs  model.rs  train.rs  training_data.rs
resnet-train/src/train/: preview.rs
resnet-train/src/training_data/: augmentation.rs  db.rs  download.rs
src/: autodiff.rs  backend.rs  cache.rs  conv.rs  cpu.rs  cuda.rs  data_type.rs  device.rs  dyn_tensor.rs  initializer.rs  lib.rs  loss.rs  module.rs  modules.rs  opgraph.rs  optimizer.rs  raw_tensor.rs  shape.rs  tensor.rs  thread_pool.rs
src/autodiff/: gradients.rs  param.rs  tape.rs
src/backend/: optimization.rs  plan_generation.rs
src/cpu/: data_type.rs  storage.rs
src/cuda/: allocator.rs  context.rs  cudnn.rs  cudnn_wrapper.rs  error.rs  execution.rs  instr.rs  kernel.rs  kernel_jit.rs  plan.rs  planner.rs  tensor.rs  tensor_storage.rs
src/cuda/allocator/: block.rs  device.rs  host_pinned.rs
src/cuda/instr/: cudnn_graph.rs  permute_dims.rs  pointwise.rs
src/cuda/instr/permute_dims/: jit.rs
src/cuda/instr/pointwise/: jit.rs
src/cuda/instr/pointwise/snapshots/: helium__cuda__instr__pointwise__jit__tests__no_reduction.snap
src/cuda/kernel/: pointwise.rs  reduction.rs  restructure.rs
src/cuda/kernel/snapshots/: helium__cuda__kernel__pointwise__tests__generate_kernel-2.snap  helium__cuda__kernel__pointwise__tests__generate_kernel.snap  helium__cuda__kernel__reduction__tests__generate_kernel-2.snap  helium__cuda__kernel__reduction__tests__generate_kernel.snap
src/cuda/snapshots/: helium__cuda__kernel_jit__tests__compile_simple_kernel.snap  helium__cuda__planner__tests__generate_plan.snap
src/module/: record.rs
src/module/record/: safetensors.rs
src/modules/: batch_norm.rs  conv.rs  linear.rs
src/opgraph/: op.rs  subgraph.rs
src/optimizer/: adam.rs  sgd.rs
src/tensor/: gradients.rs  param.rs  tape.rs
tests/: autodiff.rs  loss.rs  module.rs  stress_test.rs  tensor_ops.rs
tests_/: autodiff.rs
