[package]
name = "helium"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
bumpalo = { version = "3", optional = true }
bytemuck = { version = "1", features = ["derive", "min_const_generics", "nightly_stdsimd", "nightly_portable_simd"] }
half = { version = "2", features = ["use-intrinsics", "bytemuck"] }
slotmap = "1"
gemm = { version = "0.18", optional = true, features = ["nightly"] }
sleef = { version = "0.3", optional = true }
rayon = { version = "1", optional = true }
parking_lot = "0.12"
thiserror = "1"
thread_local = { version = "1", optional = true }
rand = "0.8"
rand_pcg = "0.3"
indoc = { version = "2", optional = true }

[dependencies.cudarc]
version = "0.12"
optional = true
default-features = false
features = [
    "std",
    "cuda-12060",
    "driver",
    "cublas",
    "cublaslt",
    "curand",
    "cudnn",
    "nvrtc",
    "nccl",
    "f16",
]

[dev-dependencies]
insta = "1"
approx = "0.5"
rand = "0.8"
faer = "0.19"
mnist = "0.6"

[features]
default = ["cpu", "cuda"]
cuda = ["dep:cudarc", "dep:thread_local", "dep:bumpalo", "dep:indoc"]
cpu = ["dep:gemm", "dep:sleef", "dep:rayon"]

[profile.dev]
opt-level = 1
