[package]
name = "helium-kernel-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
helium-ir = { path = "../helium-ir" }
slotmap = "1"
parking_lot = "0.12"
ahash = "0.8"
indoc = "2"
tar = "0.4"
tempfile = "3"
thiserror = "2"
zstd = "0.13"
itertools = "0.14"

fd-lock = { version = "4", optional = true }
blake3 = { version = "1", optional = true }
bincode = { version = "2", optional = true }
directories = { version = "6", optional = true }

[dev-dependencies]
rstest = "0.25"

[build-dependencies]
tar = "0.4"
zstd = "0.13"

[dependencies.cudarc]
version = "0.16.4"
default-features = false
features = ["cuda-version-from-build-system", "std", "dynamic-linking", "nvrtc"]

[features]
default = ["disk-cache"]
disk-cache = ["dep:fd-lock", "dep:blake3", "dep:bincode", "dep:directories"]
