[package]
name = "helium"
version = "0.1.0"
edition = "2024"

[dependencies]
helium-macros = { path = "../helium-macros" }
helium-ir = { path = "../helium-ir" }
ahash = "0.8"
bumpalo = "3"
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc", "min_const_generics", "nightly_stdsimd", "nightly_portable_simd"] }
half = { version = "2", features = ["use-intrinsics", "bytemuck"] }
slotmap = "1"
gemm = { version = "0.18", optional = true }
sleef = { version = "0.3", optional = true }
rayon = { version = "1", optional = true }
parking_lot = "0.12"
thiserror = "2"
thread_local = { version = "1", optional = true }
rand = "0.9"
rand_pcg = "0.9"
rand_distr = "0.5"
indoc = { version = "2", optional = true }
pollster = "0.4"
lru = "0.14"
tracing = "0.1"
profiling = "1"
flume = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.5"

[dependencies.cudarc]
version = "0.16.4"
optional = true
default-features = false
features = [
    "std",
    "dynamic-linking",
    "cuda-version-from-build-system",
    "driver",
    "cublas",
    "cublaslt",
    "curand",
    "cudnn",
    "nvrtc",
    "nccl",
    "f16",
]

[dev-dependencies]
tracing-subscriber = "0.3"
insta = "1"
approx = "0.5"
rand = "0.9"
mnist = { version = "0.6", features = ["download"] }

[features]
default = ["cpu", "cuda"]
cuda = ["dep:cudarc", "dep:thread_local", "dep:indoc"]
cuda-tracing = []
cuda-debug = []
cpu = ["dep:gemm", "dep:sleef", "dep:rayon"]
