[package]
name = "resnet-train"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
helium = { path = ".." }
ureq = "2"
parquet = "53"
arrow-array = "53"
redb = "2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "rayon"] }
rand = "0.8"
rand_pcg = "0.3"
plotters = "0.3"
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }
flume = "0.11"
thread-priority = "1"
imageproc = { version = "0.25", default-features = false, features = ["rayon"] }
palette = "0.7"
rand_distr = "0.4"
